openturns/1.16/_sources/auto_data_analysis/manage_data_and_samples/plot_sample_manipulation.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_sample_manipulation.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sample_manipulation.py:


Sample manipulation
===================

This example will describe the main statistical functionalities on data through the Sample object. The Sample is an output variable of interest.


.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    ot.Log.Show(ot.Log.NONE)








A typical example
-----------------

A recurring issue in uncertainty quantification is to perform analysis on an output variable of interest Y obtained through a model `f` and input parameters `X`.
Here we shall consider the input parameters as two independent standard normal distributions :math:`X=(X_1, X_2)`. We therefore use an `IndependentCopula` to describe the link between the two marginals.



.. code-block:: default


    # input parameters
    inputDist = ot.ComposedDistribution([ot.Normal()] * 2, ot.IndependentCopula(2))
    inputDist.setDescription(['X1', 'X2'])








We create a vector from the 2D-distribution created before :


.. code-block:: default

    inputVector = ot.RandomVector(inputDist)









Suppose our model `f` is known and reads as :

.. math::
   f(X) = \begin{pmatrix}
            x_1^2 + x_2 \\ 
            x_1   + x_2^2 
          \end{pmatrix}

We define our model `f` with a `SymbolicFunction` 


.. code-block:: default

    f = ot.SymbolicFunction(["x1", "x2"], ["x1^2+x2", "x2^2+x1"])








Our output vector is Y=f(X), the image of the inputVector by the model


.. code-block:: default

    outputVector = ot.CompositeRandomVector(f, inputVector)








We can now get a sample out of Y, that is realizations (here 1000) of the random outputVector


.. code-block:: default

    size = 1000
    sample = outputVector.getSample(size)








The `sample` may be seen as a matrix of size :math:`1000 \times 2`. We print the 5 first samples (out of 1000) :


.. code-block:: default

    sample[:5]







.. raw:: html

    <TABLE><TR><TD></TD><TH>y0</TH><TH>y1</TH></TR>
    <TR><TH>0</TH><TD>-0.5815072</TD><TD>0.7240122</TD></TR>
    <TR><TH>1</TH><TD>3.26726</TD><TD>-0.5563772</TD></TR>
    <TR><TH>2</TH><TD>-0.3683326</TD><TD>-0.08640049</TD></TR>
    <TR><TH>3</TH><TD>-1.139952</TD><TD>1.854578</TD></TR>
    <TR><TH>4</TH><TD>5.692328</TD><TD>-1.219674</TD></TR>
    </TABLE>
    <br />
    <br />

Basic operations on samples
---------------------------
We have access to basic information about a sample such as 

- minimum and maximum per component



.. code-block:: default

    sample.getMin(), sample.getMax()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    (class=Point name=Unnamed dimension=2 values=[-2.56587,-2.84726], class=Point name=Unnamed dimension=2 values=[9.93535,12.1777])



- the range per component (max-min)



.. code-block:: default

    sample.computeRange()






.. raw:: html

    <p>[12.5012,15.025]</p>
    <br />
    <br />

More elaborate functionalities are also available :


- get the median per component



.. code-block:: default

    sample.computeMedian()






.. raw:: html

    <p>[0.680688,0.874763]</p>
    <br />
    <br />

- compute the covariance



.. code-block:: default

    sample.computeCovariance()






.. raw:: html

    <p>[[  2.59234   -0.0758625 ]<br>
     [ -0.0758625  3.30636   ]]</p>
    <br />
    <br />

- get the empirical 0.95 quantile per component



.. code-block:: default

    sample.computeQuantilePerComponent(0.95)






.. raw:: html

    <p>[3.67518,4.13131]</p>
    <br />
    <br />

- get the value of the empirical CDF at a point



.. code-block:: default

    point = [1.1, 2.2]
    sample.computeEmpiricalCDF(point)






.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    0.518



Estimate the statistical moments
--------------------------------

Oftentimes, we need to estimate the first moments of the output data. We can then estimate statistical moments from the output sample :

- estimate the moment of order 1 : mean



.. code-block:: default

    sample.computeMean()






.. raw:: html

    <p>[0.903872,1.15217]</p>
    <br />
    <br />

- estimate the standard deviation (returns the Cholesky factor)



.. code-block:: default

    sample.computeStandardDeviation()






.. raw:: html

    <p>[[  1.61007    0         ]<br>
     [ -0.0471174  1.81773   ]]</p>
    <br />
    <br />

- estimate the standard deviation for each component



.. code-block:: default

    sample.computeStandardDeviationPerComponent()






.. raw:: html

    <p>[1.61007,1.81834]</p>
    <br />
    <br />

- estimate the moment of order 2 : variance



.. code-block:: default

    sample.computeVariance()






.. raw:: html

    <p>[2.59234,3.30636]</p>
    <br />
    <br />

- estimate the moment of order 3 : skewness



.. code-block:: default

    sample.computeSkewness()






.. raw:: html

    <p>[1.28241,1.80582]</p>
    <br />
    <br />

- estimate the moment of order 4 : kurtosis



.. code-block:: default

    sample.computeKurtosis()






.. raw:: html

    <p>[6.40216,9.59074]</p>
    <br />
    <br />

Test the correlation
--------------------

Some statistical test for correlation are available :

- get the sample Pearson correlation matrix :



.. code-block:: default

    sample.computePearsonCorrelation()






.. raw:: html

    <p>[[  1         -0.0259123 ]<br>
     [ -0.0259123  1         ]]</p>
    <br />
    <br />

- get  the sample Kendall correlation matrix :



.. code-block:: default

    sample.computeKendallTau()






.. raw:: html

    <p>[[ 1         0.0183584 ]<br>
     [ 0.0183584 1         ]]</p>
    <br />
    <br />

- get  the sample Spearman correlation matrix :



.. code-block:: default

    sample.computeSpearmanCorrelation()






.. raw:: html

    <p>[[ 1         0.0200394 ]<br>
     [ 0.0200394 1         ]]</p>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.009 seconds)


.. _sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_sample_manipulation.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_sample_manipulation.py <plot_sample_manipulation.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_sample_manipulation.ipynb <plot_sample_manipulation.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
